--- a/content/blogs/My_Projects.html
+++ b/content/blogs/My_Projects.html
@@ -7,29 +7,27 @@ draft: false
 # image: pic07.jpg
 keywords: ""
 slug: my_projects
-title: My Projects
+title: Machine Learning for Additive Manufacturing
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<div id="machine-learning-for-additive-manufacturing" class="section level2">
-<h2>1 | Machine Learning for Additive Manufacturing</h2>
-<div id="creating-a-machine-learning-classification-algorithm-for-additive-manufacturing-using-matlab" class="section level3">
-<h3>Creating a machine learning classification algorithm for additive manufacturing using <em>MATLAB</em></h3>
+<div id="creating-a-machine-learning-classification-algorithm-for-additive-manufacturing-using-matlab" class="section level2">
+<h2>Creating a machine learning classification algorithm for additive manufacturing using <em>MATLAB</em></h2>
 <blockquote>
-<p>Part of my final year thesis for completion of my Bachelor in Mechanical Engineering at the University of Warwick</p>
+<p><strong>Part of my final year thesis for completion of my Bachelor in Mechanical Engineering at the University of Warwick. I Worked with Dmitry Isakov, Research Fellow at the University of Oxford, and I obtained an 87% on the project. I then was offered a position as student researcher.</strong></p>
 </blockquote>
-</div>
 <div id="abstract" class="section level3">
 <h3>Abstract</h3>
 <p>Methodology and analysis of the development of a software and a machine learning (ML) algorithm for image extraction and classification of a Selective Laser Melting (SLM) additive manufacturing (AM) process is presented. The programmes were created by means of the MATLAB R2020b software package and the video of the surface of the powder bed of the SLM printer was captured using the XirisTM XVC-1100 smart camera. For all frames of the video captured, mean b* colour values were obtained and compared, identifying the precise frames required for analysis. An accuracy of 99% was achieved, proving the aptness of the software for Laser-Powder Bed Fusion layer-wise quality monitoring. Thereafter, a Bag of Visual Words (BoVW) ML algorithm was trained using the collected frames, which was subsequently tested, achieving a 92.1% accuracy. Several validation techniques were utilised, confirming software integrity. Finally, the impact of the developed programmes was outlined, focusing on their significance for research and evaluation of the effect of AM process parameters in print quality, and the opportunities for implementation in real-time AM quality monitoring systems.</p>
-<p><img src="/img/Tech_Report2.png" width="50%" /></p>
 </div>
 <div id="the-code" class="section level3">
 <h3>The Code</h3>
 <div id="code-for-image-database-collection" class="section level4">
 <h4>Code for image database collection</h4>
+<p><em>Figure 1: Flowchart of process carried out</em></p>
+<p><img src="/img/Tech_Report.png" width="60%" /></p>
 <p><em>Read video and initialise variables.</em></p>
 <pre><code>% Reading video
 v = VideoReader(&#39;FullVideo.avi&#39;);
@@ -111,6 +109,8 @@ end</code></pre>
 </div>
 <div id="code-for-image-classification" class="section level4">
 <h4>Code for Image Classification</h4>
+<p><em>Figure 2: Flowchart of process carried out</em></p>
+<p><img src="/img/Tech_Report2.png" width="60%" /></p>
 <p><em>Establish datasets using ImageDataStore function.</em></p>
 <pre><code>File = fullfile(&#39;C:\Training and Test Set&#39;);
 DB = imageDatastore(File,&#39;IncludeSubfolders&#39;, true, &#39;LabelSource&#39;,&#39;foldernames&#39;);</code></pre>
@@ -121,7 +121,7 @@ Categories = tbl.Label;</code></pre>
 <pre><code>Ilocation = fileparts(DB.Files{1});
 imgSet = imageSet(strcat(Ilocation,&#39;\..&#39;),&#39;recursive&#39;); % Recursively scan entire image set folder
 [training_set,test_set] = imgSet.partition(113); % Create training and test set
-test_set = test_set.partition(76);</code></pre>
+test_set = test_set.partition(76)</code></pre>
 <p><em>Create visual vocabulary.</em></p>
 <pre><code>tic % Start timer
 % Use bagOfFeatures function to create vocabulary
