--- a/content/blogs/AboutMe.html
+++ b/content/blogs/AboutMe.html
@@ -26,10 +26,8 @@ title: About Me
 <div id="my-hobbies" class="section level2">
 <h2>My hobbies</h2>
 <p>Whenever I have time, I practice sports. Here are a few photos that showcase what I usually do in my free time.</p>
-<p><img src="/img/windsurf.png" width="60%" /></p>
-<ul>
-<li>Having lived next to the see my whole life, I like to practice water sports, especially windsurf and sailing. Being individual sports, they give me time to think, and through them I have been able to learn how to come up with solutions in desperate times from an early age.*</li>
-</ul>
-<p><img src="/img/sailing1.png" width="60%" /></p>
-<p>*There has not been a year in which I had not played basketball, having competed at a national level in Spain, in the UK against other universities and now as part of the London Business School team.</p>
+<p><img src="/img/windsurf.jpg" width="60%" /></p>
+<p>Having lived next to the see my whole life, I like to practice water sports, especially windsurf and sailing. Being individual sports, they give me time to think, and through them I have been able to learn how to come up with solutions in desperate times from an early age. Find me here with afro!</p>
+<p><img src="/img/Sailing2.jpeg" width="60%" /></p>
+<p>There has not been a year in which I had not played basketball, having competed at a national level in Spain, in the UK against other universities and now as part of the London Business School team.</p>
 </div>
