--- a/content/blogs/My_Experience.html
+++ b/content/blogs/My_Experience.html
@@ -13,4 +13,41 @@ title: My Experience
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p>This will be the my experience page</p>
+<div id="deloitte-consulting" class="section level1">
+<h1>Deloitte Consulting</h1>
+<div id="strategy-summer-intern-jun-sep-2021" class="section level2">
+<h2>Strategy Summer Intern (Jun-Sep 2021)</h2>
+<ul>
+<li>Established strategy for creation of an AI Hub in Spain for the European Digital AI Network by contacting key agents, identifying business structure and benchmarking against 50 hubs internationally</li>
+<li>Attracted Scottish ferry company to dock at a Spanish port by presenting an extensive analysis of potential opportunities in city, generating a potential 30% increase in maritime tourism activity</li>
+<li>Reduced time spent in daily reporting of health data of arrivals to Spain for the Ministry of Health by 70%, creating ad hoc macros in Excel’s VBA</li>
+<li>Developed NLP algorithm measuring degree of semantic similarity between users reviews of Spain Travel Health app, identifying 5 key improvements in usability and app reliability</li>
+</ul>
+<p><img src="/img/Deloitte.jpg" width="50%" /></p>
+</div>
+</div>
+<div id="mace-group" class="section level1">
+<h1>Mace Group</h1>
+<div id="consulting-intern-jun-aug-2020" class="section level2">
+<h2>Consulting Intern (Jun-Aug 2020)</h2>
+<ul>
+<li>Gathered data of past project cost models to create database of 600+ entries reducing time spent in future cost planning process by &gt;25%</li>
+<li>Addressed contractor disagreements, adopting conflict resolution techniques, improving communication of 10 delivery teams and subcontractors</li>
+</ul>
+<blockquote>
+<p><strong>VOLUNTEERING</strong></p>
+</blockquote>
+</div>
+</div>
+<div id="play-action-interncational-east-african-playgrounds" class="section level1">
+<h1>Play Action Interncational (East African Playgrounds)</h1>
+<div id="volunteer" class="section level2">
+<h2>Volunteer</h2>
+<ul>
+<li>Built playgrounds for schools in Uganda.</li>
+<li>Most enriching experience of my life!!</li>
+</ul>
+<p><img src="/img/Pala.jpg" width="45%" /><img src="/img/Aplaudir.jpg" width="45%" /></p>
+<p><img src="/img/discover.jpg" width="40%" /></p>
+</div>
+</div>
