--- a/content/blogs/My_Resume.html
+++ b/content/blogs/My_Resume.html
@@ -13,4 +13,5 @@ title: My Resume
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p>I will link my resume to this page</p>
+<p>Download CV (updated 13/09/21):</p>
+<p><a href="%22\static\resume\CV_RomanVazquez_130921.pdf%22">My CV</a></p>
