--- a/content/blogs/My_education.html
+++ b/content/blogs/My_education.html
@@ -13,24 +13,23 @@ title: My Education
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p><img src="/img/LBS_Logo.jpg" width="30%" /></p>
+<p><img src="/img/LBS_Logo.jpg" width="30%" /><img src="/img/warwick.png" width="30%" /><img src="/img/LogoSMM.jpg" width="30%" /></p>
 <div id="london-business-school" class="section level1">
 <h1>London Business School</h1>
 <div id="master-in-analytics-and-management-2021-2022" class="section level2">
-<h2>Master in Analytics and Management | 2021-2022</h2>
+<h2>Master in Analytics and Management 2021-2022</h2>
 <ul>
 <li>Applied Statistics</li>
 <li>Data Science for Business</li>
 <li>Data Management</li>
 <li>Using Data-Science Responsibly</li>
 </ul>
-<p><img src="/img/warwick.png" width="30%" /></p>
 </div>
 </div>
 <div id="university-of-warwick" class="section level1">
 <h1>University of Warwick</h1>
 <div id="beng-in-mechanical-engineering-2018-2021" class="section level2">
-<h2>BEng in Mechanical Engineering | 2018-2021</h2>
+<h2>BEng in Mechanical Engineering 2018-2021</h2>
 <p>Graduated with a First Class Honours Degree.</p>
 <ul>
 <li>Warwick Hyperloop: Dynamics Team Leader</li>
@@ -38,12 +37,18 @@ title: My Education
 <li>Warwick Basketball Club</li>
 <li>Warwick Engineering Society</li>
 </ul>
-<p><img src="/img/LogoSMM.jpg" width="30%" /></p>
 </div>
 </div>
 <div id="santa-maria-del-mar-la-coruña" class="section level1">
 <h1>Santa Maria del Mar, La Coruña</h1>
-<div id="spanish-baccalaureate" class="section level2">
-<h2>Spanish Baccalaureate</h2>
+<div id="spanish-baccalaureate-2003-2018" class="section level2">
+<h2>Spanish Baccalaureate 2003-2018</h2>
+<ul>
+<li>Best Spanish Baccalaureate results prize</li>
+<li>6 times chosen as year representative</li>
+<li>Exchange in Bordeax, Frace</li>
+<li>Exchange in Granby, Connecticut, USA</li>
+<li>Attended Oswestry School Boarding School in the UK in 2013</li>
+</ul>
 </div>
 </div>
