--- a/content/blogs/My_Resume.html
+++ b/content/blogs/My_Resume.html
@@ -13,5 +13,4 @@ title: My Resume
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p>Download CV (updated 13/09/21):</p>
-<p><a href="%22\static\resume\CV_RomanVazquez_130921.pdf%22">My CV</a></p>
+<p><img src="/img/CV_RomanVazquez_130921.jpg" width="100%" /></p>
