--- a/content/blogs/My_Objectives.html
+++ b/content/blogs/My_Objectives.html
@@ -7,10 +7,11 @@ draft: false
 # image: pic07.jpg
 keywords: ""
 slug: my_objectives
-title: My Objectives
+title: Analysing Pay Gap by Gender
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p>I will explain what my objectives are</p>
+<p>From the public data <em>Ask a Manager</em>, an analysis of the differences in salary between men and woman was done. The whole project was done using R.</p>
+<p><img src="/img/Slide1.png" width="100%" /><img src="/img/Slide2.png" width="100%" /><img src="/img/Slide3.png" width="100%" /><img src="/img/Slide4.png" width="100%" /><img src="/img/Slide5.png" width="100%" /></p>
